assets/css/main.css
/* Branding */

.gov-header gov-branding a {
  color: var(--gov-nav-color, var(--gov-color-neutral-white));
  text-decoration: none;
}

.gov-header gov-branding .heading {
  font-weight: var(--gov-text-3xl-font-weight);
  font-size: var(--gov-text-3xl-font-size);
  line-height: var(--gov-text-3xl-line-height);
  letter-spacing: var(--gov-text-3xl-letter-spacing);
}

.gov-header gov-branding .language {
  display: flex;
  align-items: center;
}

/* Unify header with data portal style. */

.gov-header>gov-container {
  padding-top: .5rem;
}

/* Global styles. */

a {
  text-decoration: none;
}

.gov-header {
  margin-bottom: 1rem;
}

.gov-footer {
  margin-top: 2rem;
  padding-top: 1rem;
}

/* Custom component styles. */

.chip-container {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

/* General styles. */

.italic {
  font-style: italic;
}

.break-word-wrap {
  word-wrap: break-word;
}

.grow {
  flex-grow: 1;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-space-between {
  display: flex;
  justify-content: space-between;
}

.flex-space-evenly {
  display: flex;
  justify-content: space-evenly;
}

.flex-justify-end {
  display: flex;
  justify-content: end;
}

.align-items-center {
  align-items: center;
}

.gap-2 {
  gap: .5em;
}

.gap-4 {
  gap: 1em;
}

.inline {
  display: inline;
}

.x-large {
  font-size: x-large;
}

.larger {
  font-size: larger;
}

.m-1 {
  margin: .25rem;
}

.m-2 {
  margin: .5rem;
}

.m-3 {
  margin: .75rem;
}

.m-4 {
  margin: 1rem;
}

.mb-1 {
  margin-bottom: .25rem;
}

.mb-2 {
  margin-bottom: .5rem;
}

.p-0 {
  padding: 0;
}

.p-2 {
  padding: .5rem;
}

.h-full {
  height: 100%;
}

